changement of language

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html" >Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="cv.html">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -79,11 +79,11 @@
               <div class="card-body">
                 <div class="blog-meta">
                   <span class="blog-date">Jan 2025</span>
-                  <span class="blog-category">Cybersécurité</span>
+                  <span class="blog-category">Cybersecurity</span>
                 </div>
-                <h5 class="card-title">L'IA va-t-elle tuer le Bug Bounty ? 🤖</h5>
-                <p class="card-text">Avec ChatGPT qui trouve des vulnérabilités en 2 minutes, est-ce que le Bug Bounty a encore un avenir ? Spoiler : oui, mais différemment...</p>
-                <button class="btn btn-primary" onclick="showArticle('article1')">Lire la suite</button>
+                <h5 class="card-title">Will AI Kill Bug Bounty? 🤖</h5>
+                <p class="card-text">With ChatGPT finding vulnerabilities in 2 minutes, does Bug Bounty still have a future? Spoiler: yes, but differently...</p>
+                <button class="btn btn-primary" onclick="showArticle('article1')">Read more</button>
               </div>
             </div>
           </div>
@@ -95,9 +95,9 @@
                   <span class="blog-date">Jan 2025</span>
                   <span class="blog-category">Dev</span>
                 </div>
-                <h5 class="card-title">Symfony 8 : Pourquoi j'ai dit adieu à Laravel 🚀</h5>
-                <p class="card-text">Après 2 ans avec Laravel, j'ai switché sur Symfony. Voici pourquoi ce framework français mérite plus d'amour qu'on ne le pense.</p>
-                <button class="btn btn-primary" onclick="showArticle('article2')">Lire la suite</button>
+                <h5 class="card-title">Symfony 8: Why I Said Goodbye to Laravel 🚀</h5>
+                <p class="card-text">After 2 years with Laravel, I switched to Symfony. Here's why this French framework deserves more love than we think.</p>
+                <button class="btn btn-primary" onclick="showArticle('article2')">Read more</button>
               </div>
             </div>
           </div>
@@ -106,12 +106,12 @@
             <div class="card blog-card">
               <div class="card-body">
                 <div class="blog-meta">
-                  <span class="blog-date">Déc 2024</span>
+                  <span class="blog-date">Dec 2024</span>
                   <span class="blog-category">Cloud</span>
                 </div>
-                <h5 class="card-title">Scaleway vs AWS : Le match du siècle 💰</h5>
-                <p class="card-text">J'ai migré 3 PrestaShops sur Scaleway. Résultat ? 60% d'économies et zéro regret. Voici pourquoi les français font mieux que les américains.</p>
-                <button class="btn btn-primary" onclick="showArticle('article3')">Lire la suite</button>
+                <h5 class="card-title">Scaleway vs AWS: The Match of the Century 💰</h5>
+                <p class="card-text">I migrated 3 PrestaShops to Scaleway. Result? 60% savings and zero regrets. Here's why the French do better than the Americans.</p>
+                <button class="btn btn-primary" onclick="showArticle('article3')">Read more</button>
               </div>
             </div>
           </div>
@@ -120,12 +120,12 @@
             <div class="card blog-card">
               <div class="card-body">
                 <div class="blog-meta">
-                  <span class="blog-date">Déc 2024</span>
+                  <span class="blog-date">Dec 2024</span>
                   <span class="blog-category">Mobile</span>
                 </div>
-                <h5 class="card-title">Flutter vs React Native : Le verdict d'un dev backend 📱</h5>
-                <p class="card-text">En tant que dev PHP/Symfony, j'ai testé les deux. Spoiler : Flutter gagne haut la main. Voici pourquoi et comment j'ai build mon app de gestion de courses.</p>
-                <button class="btn btn-primary" onclick="showArticle('article4')">Lire la suite</button>
+                <h5 class="card-title">Flutter vs React Native: A Backend Dev's Verdict 📱</h5>
+                <p class="card-text">As a PHP/Symfony dev, I tested both. Spoiler: Flutter wins hands down. Here's why and how I built my shopping management app.</p>
+                <button class="btn btn-primary" onclick="showArticle('article4')">Read more</button>
               </div>
             </div>
           </div>
@@ -135,11 +135,11 @@
               <div class="card-body">
                 <div class="blog-meta">
                   <span class="blog-date">Nov 2024</span>
-                  <span class="blog-category">Cybersécurité</span>
+                  <span class="blog-category">Cybersecurity</span>
                 </div>
-                <h5 class="card-title">Comment j'ai hacké mon propre site (et pourquoi c'est important) 🔒</h5>
-                <p class="card-text">Pentest de mon propre portfolio : SQL injection, XSS, CSRF... J'ai trouvé 7 vulnérabilités. Voici comment les corriger et pourquoi c'est crucial.</p>
-                <button class="btn btn-primary" onclick="showArticle('article5')">Lire la suite</button>
+                <h5 class="card-title">How I Hacked My Own Site (and Why It's Important) 🔒</h5>
+                <p class="card-text">Pentest of my own portfolio: SQL injection, XSS, CSRF... I found 7 vulnerabilities. Here's how to fix them and why it's crucial.</p>
+                <button class="btn btn-primary" onclick="showArticle('article5')">Read more</button>
               </div>
             </div>
           </div>
@@ -149,11 +149,11 @@
               <div class="card-body">
                 <div class="blog-meta">
                   <span class="blog-date">Nov 2024</span>
-                  <span class="blog-category">Carrière</span>
+                  <span class="blog-category">Career</span>
                 </div>
                 <h5 class="card-title">Cybersecurity apprenticeship: My 6 months of struggle and success 🎯</h5>
-                <p class="card-text">De zéro à héros en 6 mois : comment j'ai appris la cybersécurité en alternance, mes erreurs, mes victoires et mes conseils pour réussir.</p>
-                <button class="btn btn-primary" onclick="showArticle('article6')">Lire la suite</button>
+                <p class="card-text">From zero to hero in 6 months: how I learned cybersecurity through apprenticeship, my mistakes, my victories and my tips for success.</p>
+                <button class="btn btn-primary" onclick="showArticle('article6')">Read more</button>
               </div>
             </div>
           </div>
@@ -162,8 +162,8 @@
 
             <div class="card my-5">
               <div class="card-body text-center ">
-                <h3 class="card-title fw-bolder">Article :</h3>
-                <h6 class="text-info" id="info">Cliquez sur un article pour lire son contenu.</h6>
+                <h3 class="card-title fw-bolder">Article:</h3>
+                <h6 class="text-info" id="info">Click on an article to read its content.</h6>
                 <div id="articleContent" class="mt-5 p-4 bg-dark border rounded" >
                   <p class="card-text" id="articleText"></p>
                 </div>
@@ -179,11 +179,11 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">L'expérience</h3>
-      <p>est la meilleure façon d'apprendre </p>
+      <h3 class="sitename">Experience</h3>
+      <p>is the best way to learn</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
