--- a/cv.html
+++ b/cv.html
@@ -32,17 +32,17 @@
       <h1 class="sitename">My Portfolio</h1>
     </a>
 
-    <nav id="navmenu" class="navmenu">
-      <ul>
-        <li><a href="index.html" >Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="cv.html" class="active">Resume</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="blog.html">Blog</a></li>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="cv.html" class="active">Resume</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="blog.html">Blog</a></li>
 
 
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
 
@@ -111,12 +111,12 @@
               <h5>Sept 2024 - Present</h5>
               <p><em>SEMR MagicRecycle</em></p>
               <ul>
-                <li>Development and maintenance of ERP features (PHP/Symfony)</li>
-                <li>Complete integration with APIs (PrestaShop, OpenSi)</li>
-                <li>Migration of 3 PrestaShops (v1.7.7.7/1.7.7.8 to v8.2 and v9)</li>
-                <li>Cloud infrastructure management (Scaleway) and cost optimization</li>
-                <li>SEO/UX-UI improvement and site performance</li>
-                <li>Project management with "think out of the box" approach for innovation</li>
+                <li>Develop and maintain ERP features (PHP/Symfony)</li>
+                <li>Integrate APIs (PrestaShop, OpenSi)</li>
+                <li>Migrate 3 PrestaShops (v1.7.7.7/1.7.7.8 to v8.2 and v9)</li>
+                <li>Manage cloud infrastructure (Scaleway) and optimize costs</li>
+                <li>Improve SEO/UX-UI and enhance site performance</li>
+                <li>Lead projects with "think out of the box" approach for innovation</li>
               </ul>
             </div>
 
@@ -147,8 +147,8 @@
       <h3 class="sitename">Experience</h3>
       <p>is the best way to learn</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
