--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpeg" class="img-fluid h-50 rounded-4" alt="My photo">
+            <img src="assets/img/profile-img.jpeg" class="img-fluid profile-img rounded-4" alt="My photo">
           </div>
           <div class="col-lg-8 content">
             <h2>Computer Science Engineering Apprentice</h2>
@@ -165,14 +165,21 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><span>Cybersecurity</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Cybersecurity & Pentesting</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill"><span>Python & AI/ML</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>Python</span> <i class="val">70%</i></span>
+              <span class="skill"><span>System Architecture</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -183,23 +190,30 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>JavaScript/Flutter</span> <i class="val">70%</i></span>
+              <span class="skill"><span>Machine Learning & AI</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>Bug Bounty & Pentesting</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Bug Bounty & CTF</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>DevOps & Cloud</span> <i class="val">65%</i></span>
+              <span class="skill"><span>DevOps & Cloud Architecture</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill"><span>Network Security</span> <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -233,28 +247,28 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="features-item">
               <i class="fa-solid fa-code text-primary"></i>
-              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Full-Stack Development</a></h3>
+              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link" target="_blank" rel="noopener noreferrer">Full-Stack Development</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="features-item">
               <i class="fa-solid fa-cloud text-info"></i>
-              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">DevOps & Cloud</a></h3>
+              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link" target="_blank" rel="noopener noreferrer">DevOps & Cloud</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="features-item">
               <i class="fa-solid fa-mobile-screen text-warning"></i>
-              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Mobile Development</a></h3>
+              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link" target="_blank" rel="noopener noreferrer">Mobile Development</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="features-item">
               <i class="fa-solid fa-database text-secondary"></i>
-              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">Databases</a></h3>
+              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link" target="_blank" rel="noopener noreferrer">Databases</a></h3>
             </div>
           </div>
 
@@ -381,8 +395,8 @@
       <h3 class="sitename">You know what? </h3>
       <p>I am just passionate</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
