--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,8 @@
               <div>
                 <h3>Réseaux sociaux</h3>
                 <div class="social-links">
-                  <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-                  <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -156,8 +156,8 @@
       <h3 class="sitename">In one sentence, </h3>
       <p>I am a computer science engineering apprentice in a company in Versailles and I am really happy to combine theory and practice</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
