--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active" >Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="cv.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
@@ -59,8 +59,8 @@
         <h2>Banconlé AKOBI</h2>
         <p>I am <span class="typed" data-typed-items="Passionate, creative, calm, optimistic">Computer Science Engineering Apprentice</span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
-          <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-          <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+          <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
@@ -74,8 +74,8 @@
       <h3 class="sitename">In one sentence, </h3>
       <p>I am a computer science engineering apprentice in a company in Versailles and I am really happy to combine theory and practice</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
