--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                 <img src="assets/img/portfolio/info.png" class="img-fluid portfolio__image--size" alt="image d'un écran">
                 <div class="portfolio-info">
                   <h4>Web</h4>
-                  <p>Developpement informatique</p>
+                  <p>Computer Development</p>
                   <a href="assets/img/portfolio/info.png" title="IT " data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -269,8 +269,8 @@
       <h3 class="sitename">You know what? </h3>
       <p>I love what I do</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
