--- a/about.html
+++ b/about.html
@@ -359,8 +359,8 @@
                   <span>Good doesn't make noise, noise doesn't make good</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/saint.jpeg" class="testimonial-img" alt="photo de Saint françois de Sales">
-                <h3>Saint françois de Sales</h3>
+                <img src="assets/img/testimonials/saint.jpeg" class="testimonial-img" alt="photo of Saint Francis de Sales">
+                <h3>Saint Francis de Sales</h3>
 
               </div>
             </div>
