--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
             <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="500">
               <i class="icon bi bi-share flex-shrink-0"></i>
               <div>
-                <h3>Réseaux sociaux</h3>
+                <h3>Social Networks</h3>
                 <div class="social-links">
                   <a href="https://github.com/BanconleAkobi/" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
                   <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
@@ -125,7 +125,7 @@
         <form onsubmit="sendMail(event)"  id="contactForm" class="email-form" data-aos="fade-up" data-aos-delay="600">
           <div class="row gy-4">
             <div class="col-md-6">
-              <input type="text" name="firstname" class="form-control" id="firstname" placeholder="Votre prénom" required="true">
+              <input type="text" name="firstname" class="form-control" id="firstname" placeholder="Your first name" required="true">
             </div>
       
             <div class="col-md-6">
