--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">Tous</li>
-            <li data-filter=".filter-cyberdefense">Cyberdéfense</li>
+            <li data-filter=".filter-cyberdefense">Cyber Defense</li>
             <li data-filter=".filter-pentesting">Pentesting</li>
             <li data-filter=".filter-dev">Dev web </li>
             <li data-filter=".filter-hobbies">Hobbies</li>
@@ -94,7 +94,7 @@
                 <img src="assets/img/portfolio/basket.png" class="img-fluid portfolio__image--size" alt="Photo d'un ballon de basketball">
                 <div class="portfolio-info">
                   <h4>Basketball</h4>
-                  <p>Sport d'équipe préféré.</p>
+                  <p>Favorite team sport.</p>
                   <a href="assets/img/portfolio/basket.png" title="basket" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -113,7 +113,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dev">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/info.png" class="img-fluid portfolio__image--size" alt="image d'un écran">
+                <img src="assets/img/portfolio/info.png" class="img-fluid portfolio__image--size" alt="screen image">
                 <div class="portfolio-info">
                   <h4>Web</h4>
                   <p>Computer Development</p>
@@ -124,10 +124,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cyberdefense">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/hacker2.jpeg" class="img-fluid portfolio__image--size" alt="image d'un">
+                <img src="assets/img/portfolio/hacker2.jpeg" class="img-fluid portfolio__image--size" alt="image cyber">
                 <div class="portfolio-info">
                   <h4>Intro_cyber</h4>
-                  <p>Introduction à la cyber | Tryhackme</p>
+                  <p>Introduction to cybersecurity | TryHackMe</p>
                   <a href="assets/img/portfolio/intro_cyber.png" title="Cyber Intro" data-gallery="portfolio-gallery-book" class="glightbox preview-link text-center"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -159,8 +159,8 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/meditation.png" class="img-fluid portfolio__image--size" alt="image d'un coucher de soleil">
                 <div class="portfolio-info">
-                  <h4>Médidation</h4>
-                  <p>méditation quotidienne pour gérer le stress</p>
+                  <h4>Meditation</h4>
+                  <p>daily meditation to manage stress</p>
                   <a href="assets/img/portfolio/meditation.png" title="sunset" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -226,7 +226,7 @@
                 <img src="assets/img/portfolio/isc2.jpeg" class="img-fluid portfolio__image--size" alt="image de la certification Security CC ISC2">
                 <div class="portfolio-info">
                   <h4>Security CC ISC2</h4>
-                  <p>Certification professionnelle en cybersécurité</p>
+                  <p>Professional cybersecurity certification</p>
                   <a href="assets/img/portfolio/isc2.png" title="Security CC ISC2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -237,7 +237,7 @@
                 <img src="assets/img/portfolio/hacker1.jpeg" class="img-fluid portfolio__image--size" alt="image de certification Junior Penetration Tester">
                 <div class="portfolio-info">
                   <h4>Junior Penetration Tester</h4>
-                  <p>Certification TryHackMe - Tests de pénétration</p>
+                  <p>TryHackMe Certification - Penetration Testing</p>
                   <a href="assets/img/portfolio/pentester.png" title="Junior Penetration Tester" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
