--- a/cv.html
+++ b/cv.html
@@ -80,7 +80,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Technical Experience</h3>
+            <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>IT Manager Apprentice</h4>
               <h5>Sept 2024 - Present</h5>
