--- a/cv.html
+++ b/cv.html
@@ -86,12 +86,13 @@
               <h5>Sept 2024 - Present</h5>
               <p><em>SEMR MagicRecycle</em></p>
               <ul>
-                <li>Develop and maintain ERP features (PHP/Symfony)</li>
-                <li>Integrate APIs (PrestaShop, OpenSi)</li>
-                <li>Migrate 3 PrestaShops (v1.7.7.7/1.7.7.8 to v8.2 and v9)</li>
-                <li>Manage cloud infrastructure (Scaleway) and optimize costs</li>
-                <li>Improve SEO/UX-UI and enhance site performance</li>
-                <li>Lead projects with "think out of the box" approach for innovation</li>
+                <li>Developed and maintained key features of the company's ERP system, integrating multiple APIs to streamline business operations.</li>
+                <li>Designed and launched a blog management system connected to the ERP, boosting online visibility and SEO performance.</li>
+                <li>Enhanced website SEO and user experience, increasing traffic and engagement metrics.</li>
+                <li>Successfully led major e-commerce platform migrations, ensuring data security, compliance, and operational continuity.</li>
+                <li>Upgraded and optimized backend systems to improve performance, reliability, and scalability.</li>
+                <li>Managed cloud infrastructure efficiently, reducing costs and improving system uptime.</li>
+                <li>Facilitated team workshops and innovation sessions to promote creative problem-solving and continuous improvement.</li>
               </ul>
             </div>
 
