Cv updated with projects

--- a/cv.html
+++ b/cv.html
@@ -141,6 +141,159 @@
 
     </section>
 
+    <!-- Projects Section -->
+    <section id="projects" class="projects section">
+
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Projects</h2>
+        <div><span>My</span> <span class="description-title">key projects</span></div>
+      </div>
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-6">
+            <div class="project-card">
+              <div class="project-header">
+                <h4>Portfolio Personal Website</h4>
+                <span class="tech-stack">HTML, CSS, JavaScript, Bootstrap</span>
+              </div>
+              <p class="project-description">
+                Built a modern, responsive personal portfolio showcasing my skills, experience, blog, and projects. Features smooth animations, dark theme design, and fully responsive layout for all devices.
+              </p>
+              <ul class="project-highlights">
+                <li>Responsive design with mobile-first approach</li>
+                <li>Integrated blog section with article management</li>
+                <li>Smooth animations and interactive elements</li>
+                <li>Clean, professional UI with modern aesthetics</li>
+              </ul>
+              <a href="https://github.com/BanconleAkobi/portfolio_bia" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">View on GitHub</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="project-card">
+              <div class="project-header">
+                <h4>Ticket Manager System</h4>
+                <span class="tech-stack">Symfony, PHP, MySQL, CSS</span>
+              </div>
+              <p class="project-description">
+                TP FISA 3 project - Built a ticket management application using Symfony framework. Implements CRUD operations, user authentication, and ticket tracking for support systems.
+              </p>
+              <ul class="project-highlights">
+                <li>Developed with Symfony MVC architecture</li>
+                <li>User authentication and role management</li>
+                <li>Database design and optimization</li>
+                <li>Form handling and validation</li>
+              </ul>
+              <a href="https://github.com/BanconleAkobi/ticket_manager" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">View on GitHub</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="project-card">
+              <div class="project-header">
+                <h4>Tron Game in Java</h4>
+                <span class="tech-stack">Java, GUI, Game Development</span>
+              </div>
+              <p class="project-description">
+                Classic Tron game implementation in Java featuring graphics UI, player mechanics, collision detection, and game loop management. Demonstrates object-oriented programming principles.
+              </p>
+              <ul class="project-highlights">
+                <li>Object-oriented game architecture</li>
+                <li>Graphics rendering and animation</li>
+                <li>Game physics and collision detection</li>
+                <li>Player input handling and game state management</li>
+              </ul>
+              <a href="https://github.com/BanconleAkobi/Tron_project" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">View on GitHub</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="project-card">
+              <div class="project-header">
+                <h4>C Chat Application</h4>
+                <span class="tech-stack">C, Socket Programming, Network</span>
+              </div>
+              <p class="project-description">
+                Chat application built in C using socket programming. Implements client-server architecture for multi-user communication with message handling and connection management.
+              </p>
+              <ul class="project-highlights">
+                <li>Socket programming and network communication</li>
+                <li>Client-server architecture</li>
+                <li>Message protocol implementation</li>
+                <li>Connection handling and error management</li>
+              </ul>
+              <a href="https://github.com/BanconleAkobi/C_Chat" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">View on GitHub</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="project-card">
+              <div class="project-header">
+                <h4>Creathon Accessibility Project</h4>
+                <span class="tech-stack">HTML, CSS, Web Design</span>
+              </div>
+              <p class="project-description">
+                Web project for supporting disabled people at a festival (Creathon). Designed an accessible and user-friendly website to provide information and resources for event attendees.
+              </p>
+              <ul class="project-highlights">
+                <li>Accessibility-focused design principles</li>
+                <li>Responsive website layout</li>
+                <li>User-friendly interface</li>
+                <li>Information organization and presentation</li>
+              </ul>
+              <a href="https://github.com/BanconleAkobi/Creathon_project" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">View on GitHub</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="project-card">
+              <div class="project-header">
+                <h4>CTF Challenges & Security Labs</h4>
+                <span class="tech-stack">TryHackMe, HackTheBox, OWASP, Security Training</span>
+              </div>
+              <p class="project-description">
+                Active participation in Capture The Flag (CTF) competitions and security challenges. Practical experience with real-world penetration testing scenarios and vulnerability exploitation techniques.
+              </p>
+              <ul class="project-highlights">
+                <li>Solved 100+ CTF challenges across multiple platforms</li>
+                <li>Hands-on penetration testing and vulnerability exploitation</li>
+                <li>Security methodologies and best practices mastery</li>
+                <li>Continuous learning through practical security labs</li>
+              </ul>
+              <div style="margin-top: auto; padding-top: 15px; border-top: 1px solid color-mix(in srgb, var(--accent-color), transparent 70%); font-size: 0.85rem; color: var(--accent-color);">
+                Active learner - Regular participant
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="project-card in-progress">
+              <div class="project-header">
+                <h4>Cybersecurity Implementation (In Progress)</h4>
+                <span class="tech-stack">SIEM, Splunk, Wazuh, Mitre ATT&CK, TryHackMe</span>
+              </div>
+              <p class="project-description">
+                Ongoing cybersecurity learning focused on Security Information and Event Management (SIEM) systems, threat detection, and incident response. Hands-on experience with enterprise security tools and frameworks.
+              </p>
+              <ul class="project-highlights">
+                <li>SIEM deployment and configuration (Splunk, Wazuh)</li>
+                <li>Log analysis and threat detection</li>
+                <li>Mitre ATT&CK framework understanding and application</li>
+                <li>Active learning through TryHackMe cybersecurity labs</li>
+              </ul>
+              <a href="https://www.tryhackme.com/p/BanconleAkobi" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm">TryHackMe Profile</a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
   </main>
 
   <footer id="footer" class="footer dark-background">
